--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <!-- <span class="navbar-toggler-icon"></span> -->
-
+                    <i class="fa fa-bars text-warning border-0"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto   mb-2 mb-lg-0">
