--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
 
     <!-- home page work is starting  -->
 
-    <div id="home">
+    <div id="home" class="">
         <div class="container mainimage mt-5">
             <div class="row">
 
                 <div class="col-md-6 changing-text">
-                    <h1 class="mt-md-5 text-white fw-bold"> hello my name madan sain</h1>
+                    <h1 class="mt-5 text-white fw-bold"> hello my name madan sain</h1>
                     <div class="premain text-white fw-bold">
                         <h1> i am a </h1>
                         <div class="word w1 text-warning ">webdeveloper</div>
