--- a/index.html
+++ b/index.html
@@ -252,11 +252,11 @@
                     </div>
                 </div>
                 <div class="col-md-4 ">
-                    <!-- <div class="card">
+                    <div class="card">
                  <div class="card-img-top ">
-                     <a href="https://madan-sain.github.io/mediatech.github.io/" target="blank"><img src="mediatechtemple.png" class="w-100"></a>
+                     <a href="https://madan-sain.github.io/mx-clone/" target="blank"><img src="mx-player.png" class="w-100"></a>
                  </div>
-             </div> -->
+             </div>
                 </div>
             </div>
 
