--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- responsive css  -->
     <link rel="stylesheet" href="responsive.css">
-    <title>React developer </title>
+    <title>Full stack developer </title>
+    <meta name="description" content="Web design encompasses numerous different chops and disciplines in the product and conservation of websites. The different areas of web design include web graphic design; stoner interface design; authoring, including standardised law and personal software; stoner experience design; and search machine optimization"
 </head>
 
 <body>
