--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- responsive css  -->
     <link rel="stylesheet" href="responsive.css">
     <title>Full stack developer </title>
-    <meta name="description" content="Web design encompasses numerous different chops and disciplines in the product and conservation of websites. The different areas of web design include web graphic design; stoner interface design; authoring, including standardised law and personal software; stoner experience design; and search machine optimization"
+    <meta name="description" content="Web design encompasses numerous different chops and disciplines in the product and conservation of websites. The different areas of web design include web graphic design; stoner interface design; authoring, including standardised law and personal software; stoner experience design; and search machine optimization">
 </head>
 
 <body>
