--- a/index.html
+++ b/index.html
@@ -259,6 +259,40 @@
                  </div>
              </div>
                 </div>
+
+
+
+
+
+                <div class="row mt-5 mb-5">
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="card-img-top p-2 ">
+                                <a href="https://madan-sain.github.io/project-holi/" target="blank"><img
+                                        src="holi-project.png" class="w-100"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <div class="col-md-4" >
+                        <div class="card">
+                            <div class="card-img-top p-2 ">
+                                <a href="https://madan-sain.github.io/cpastone.git.io/" target="blank"><img
+                                        src="capstone.png" class="w-100"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 ">
+                        <div class="card">
+                     <div class="card-img-top ">
+                         <a href="https://madan-sain.github.io/mx-clone/" target="blank"><img src="mx-player.png" class="w-100"></a>
+                     </div>
+                 </div>
+                    </div> -->
+
+
+                </div>
+
+
             </div>
 
         </div>
