--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </div>
                     <p class="mt-5 ">I'm a practicalman with extensive My xpertise is to
                         create and design.</p>
-                    <a href="madan sain -pdf.pdf" class="btn btn-outline-warning mt-5">download c V <i
+                    <a href="madan sain cv .pdf" class="btn btn-outline-warning mt-5">download c V <i
                             class="fa fa-file-text"></i></a>
                 </div>
                 <div class="col-md-6  mt-5 ">
